# test-slack-dependabot-alerts

./: pyproject.toml
.github/workflows/: dependabot-slack.yaml
